Fix collapsed thread CSS issues when PNG arrows in use.

--- a/client/debiki/debiki.css
+++ b/client/debiki/debiki.css
@@ -43,7 +43,7 @@
   font-size: 13px;
   font-family: Verdana;
   text-decoration:none;
-  z-index: 2; /* place above PNG arrow hiders */
+  z-index: 3; /* place above PNG arrow hiders */
   left: 2px;
   top: -1px;
 }
@@ -62,6 +62,7 @@
   content: "↕";
   display: inline-block;
   width: 24px; /* align with uncollapsed replies */
+  background: white;
 }
 
 .dw-p .dw-z:before {
